# car-dealership-mobile-app

./: .gitignore  CMakeLists.txt  README.md
images/: .gitignore
network-data/: input.json
qml/: DataDetails.qml  DataView.qml  Loading.qml  Main.qml  NoDataView.qml  RefreshListView-testedApproach.qml  RefreshListView.qml  Settings.qml  Toast.qml  dataErrorView.qml
source/: Backend.cpp  Backend.h  Data.cpp  Data.h  DataBuilder.cpp  DataBuilder.h  DataDetails.cpp  DataDetails.h  DataEngine.cpp  DataEngine.h  DataObject.cpp  DataObject.h  DataParser.cpp  DataParser.h  NetworkDownlaoder.cpp  NetworkDownlaoder.h  main.cpp  utils.h
